--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,16 +63,18 @@
       "text/plain": [
        "[\"Hi Jim, I'm so glad to be working with you!\",\n",
        " \"Hi Tracy, I'm so glad to be working with you!\",\n",
+       " \"Hi Lisa, I'm so glad to be working with you!\",\n",
+       " \"Hi Jim, I'm so glad to be working with you!\",\n",
+       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
        " \"Hi Lisa, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "welcome_messages = []\n",
     "for new_employee in new_employees:\n",
     "    welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
