--- a/index.ipynb
+++ b/index.ipynb
@@ -412,12 +412,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greet_employees(): # function signature\n",
-    "    welcome_messages = [] # begin function body\n",
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
@@ -435,18 +434,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Meryl, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
        " \"Hi Joe, I'm so glad to be working with you!\",\n",
        " \"Hi Avi, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
