--- a/index.ipynb
+++ b/index.ipynb
@@ -417,6 +417,7 @@
    "outputs": [],
    "source": [
     "def greet_employees(): # function signature\n",
+    "    welcome_messages = [] # begin function body\n",
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
